# beetle

./: .gitignore  README.md  pyproject.toml
actions/: merge.yml
beetle/: __init__.py  deploy.py  generics.py  migration.py  migration.test.py  parser.py  parser.test.py  transform.py  transform.test.py  utils.py  walk.py  walk.test.py
beetle/cli/: makemigrations.py
