[tool.poetry]
name = "beetle"
version = "0.1.0"
description = "A file system cms built ontop of git that is adaptable"
authors = ["Oguntunde Caleb <usegong@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
